scrollbar fix

--- a/src/App.css
+++ b/src/App.css
@@ -16,20 +16,20 @@
   padding-top: 1.3rem;
 }
 
-::-webkit-scrollbar {
-  width: 8px;
+html::-webkit-scrollbar {
+  width: 10px;
 }
 
-::-webkit-scrollbar-track {
+html::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
   border-radius: 5rem;
 }
 
-::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb {
   background-color: rgb(79, 194, 190);
-  border-radius: 10px;
+  border-radius: 5rem;
 }
 
-::-webkit-scrollbar-thumb:hover {
-  background: rgb(53, 122, 120);
+html::-webkit-scrollbar-thumb:hover {
+  background: rgb(81, 168, 167);
 }
