--- a/src/assets/styles/Dashboard.css
+++ b/src/assets/styles/Dashboard.css
@@ -77,10 +77,23 @@
   font-size: 1.4rem;
 }
 
+.makeStyles-container-2::-webkit-scrollbar {
+  width: 10px;
+}
+
 .makeStyles-container-2::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 3px rgb(51, 148, 145);
   border-radius: 5rem;
-  margin-top: 3.5rem;
-  box-shadow: inset 0 0 5px rgb(200, 199, 199);
+  margin-top: 3.55rem;
+}
+
+.makeStyles-container-2::-webkit-scrollbar-thumb {
+  background-color: rgb(79, 194, 190);
+  border-radius: 5rem;
+}
+
+.makeStyles-container-2::-webkit-scrollbar-thumb:hover {
+  background: rgb(81, 168, 167);
 }
 
 .makeStyles-container-2 {
